# Air-Hockey-Haskell

./: README.md  ping-pong.cabal
src/: Control.hs  Main.hs  Model.hs  Types.hs  View.hs
src/Model/: Ball.hs  Player.hs  Score.hs
