name:                ping-pong
version:             0.1.0.0
author:              Yuka Chu, Chi-Hsuan Lee, Yi-Ting Wang, Heidi Cheng
maintainer:          y5chu@ucsd.edu, chl131@ucsd.edu, y9wang@ucsd.edu, h8cheng@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable brick-ping-pong
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Types,
                       Model, 
                       Model.Ball,
                       Model.Score,
                       Model.Player
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded